# genesys

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Dockerfile  Dockerfile.mcp  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  glama.json  pyproject.toml  server.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_reactivation_timestamps.py  003_add_stability_column.py  004_add_irrelevance_counter.py  005_add_embedding_384.py
benchmarks/: README.md  REPORT.md  baseline_flat.py  locomo_eval.py  locomo_ingest.py  locomo_judge.py  locomo_judged.json  locomo_run.py  run_benchmark.py
benchmarks/scenarios/: causal_reasoning.json  outdated_info.json  structural_importance.json  temporal_awareness.json
config/: default_core_categories.json
scripts/: migrate_to_postgres.py
src/genesys/: __main__.py  api.py  auth.py  context.py  main.py  providers.py  server.py
src/genesys/background/: workers.py
src/genesys/core_memory/: preferences.py  promoter.py
src/genesys/engine/: config.py  consolidation.py  contradiction.py  forgetting.py  llm_provider.py  reactivation.py  scoring.py  transitions.py
src/genesys/ingestion/: chatgpt.py  claude.py
src/genesys/mcp/: tools.py
src/genesys/models/: __init__.py  edge.py  node.py
src/genesys/retrieval/: embedding.py
src/genesys/storage/: base.py  cache.py  db.py  falkordb.py  memory.py  mongo.py  obsidian.py  postgres.py  vault_manifest.py  vault_watcher.py
src/genesys_memory/: __init__.py  __main__.py  context.py  providers.py  server.py
src/genesys_memory/core_memory/: preferences.py  promoter.py
src/genesys_memory/engine/: config.py  consolidation.py  contradiction.py  forgetting.py  llm_provider.py  reactivation.py  scoring.py  transitions.py
src/genesys_memory/mcp/: tools.py
src/genesys_memory/models/: __init__.py  edge.py  enums.py  node.py
src/genesys_memory/retrieval/: embedding.py
src/genesys_memory/storage/: base.py  cache.py  memory.py
tests/: test_atomic_reactivation.py  test_benchmark.py  test_contradiction 2.py  test_contradiction.py  test_core_memory.py  test_cross_org_security.py  test_e2e_core_operations.py  test_edge_semantics.py  test_edge_staleness.py  test_forgetting 2.py  test_forgetting.py  test_gdpr_erasure.py  test_ingestion.py  test_integration.py  test_logging.py  test_mcp_tools 2.py  test_mcp_tools.py  test_org_accounts.py  test_phase1_security.py  test_retrieval.py  test_scoring 2.py  test_scoring.py  test_transitions 2.py  test_transitions.py
