[project]
name = "genesys-memory"
version = "0.2.0"
description = "The intelligence layer for AI memory — scoring, causal inference, lifecycle management, and active forgetting"
authors = [{name = "Genesys Contributors"}]
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.11"
keywords = ["memory", "ai", "mcp", "causal-graph", "agents"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.7.0",
    "numpy>=1.26.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.30.0",
]
anthropic = [
    "anthropic>=0.30.0",
]
local = [
    "sentence-transformers>=2.2.0",
]
redis = [
    "redis>=5.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/rishimeka/genesys"
Repository = "https://github.com/rishimeka/genesys"
Issues = "https://github.com/rishimeka/genesys/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.mypy]
python_version = "3.11"
strict = true

[tool.hatch.build.targets.wheel]
packages = ["src/genesys_memory"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
